--- a/src/components/Banner/index.scss
+++ b/src/components/Banner/index.scss
@@ -4,11 +4,11 @@
   height: 400px;
   background-color: $grey;
   border-top: 1px solid $border;
-  .banner-wrapper {
+  .wrapper {
     width: $content-width;
     margin: 0 auto;
   }
-  .banner-title {
+  .title {
     margin-top: 130px;
     width: 470px;
     font-size: 28px;
