--- a/src/components/Footer/index.scss
+++ b/src/components/Footer/index.scss
@@ -5,7 +5,7 @@
   background-color: $background-color;
   border-top: 1px solid $border;
   box-sizing: border-box;
-  .footer-wrapper {
+  .wrapper {
     width: $content-width;
     margin: 0 auto;
   }
