--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,10 +1,9 @@
 @charset "utf-8";
 @import "~bootstrap/scss/bootstrap";
+@import "reset";
 @import "variables";
 
 body {
-  margin: 0;
-  padding: 0;
   font-family: $family-primary;
   font-size: $body-size;
   color: $text-color;
