--- a/src/containers/BrowseApps/index.scss
+++ b/src/containers/BrowseApps/index.scss
@@ -1,5 +1,21 @@
 @import '~scss/variables';
 
 .browse {
+  display: table;
+  height: calc(100vh - #{$footer-height});
   padding-top: $header-height;
+  .nav {
+    display: table-cell;
+    width: 210px;
+    padding-left: calc(50vw - #{$content-width}/2);
+    border-right: 1px solid $border;
+    background: #ffffff;
+    box-sizing: content-box;
+    vertical-align: top;
+  }
+  .apps {
+    display: table-cell;
+    vertical-align: top;
+    padding-right: calc(50vw - #{$content-width}/2);
+  }
 }
