--- a/src/components/Banner/index.scss
+++ b/src/components/Banner/index.scss
@@ -1,20 +1,23 @@
 @import "~scss/variables";
 
 .banner {
-  height: 400px;
+  height: $banner-height;
+  padding-top: 130px;
   background-color: $grey;
-  border-top: 1px solid $border;
+  border-bottom: 1px solid $border;
   .wrapper {
     width: $content-width;
     margin: 0 auto;
   }
   .title {
-    margin-top: 130px;
     width: 470px;
     font-size: 28px;
     font-weight: 500;
     line-height: 1.43;
     text-align: left;
     color: $title-color;
+  }
+  .search {
+    margin-top: $base-margin;
   }
 }
