--- a/src/components/Nav/index.scss
+++ b/src/components/Nav/index.scss
@@ -1,8 +1,13 @@
 @import "~scss/variables";
 
 .nav {
+  padding: $base-margin 0;
   .subNav {
-    margin-top: 24px;
+    padding: 0;
+    margin-top: $base-margin;
+    &:first-of-type {
+      margin-top: 0;
+    }
     p {
       line-height: 19px;
       font-size: $size-medium;
