--- a/src/components/Base/Select/index.scss
+++ b/src/components/Base/Select/index.scss
@@ -15,18 +15,18 @@
 .control {
   position: relative;
   padding: 8px 10px;
-	border-radius: 2px;
-	background-color: #ffffff;
-  border: solid 1px #e7e7e7;
-	box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.08);
+  border-radius: 2px;
+  background-color: #ffffff;
+  border: solid 1px $border;
+  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.08);
   cursor: pointer;
   transition: all .3s ease-in-out;
   .controlLabel {
     line-height: 16px;
-    color: #333333;
+    color: $text-color;
   }
   &:hover {
-    background-color: #e7e7e7;
+    background-color: $border;
   }
 }
 
@@ -37,14 +37,14 @@
   max-height: 200px;
   margin-top: 2px;
   border-radius: 2px;
-  border: solid 1px #e7e7e7;
+  border: solid 1px $border;
   box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.08);
   .option {
     position: relative;
     padding: 9px 10px;
     cursor: pointer;
     &:hover {
-      background-color: #e7e7e7;
+      background-color: $border;
     }
   }
 }
