--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -42,6 +42,7 @@ $size-medium: 16px; // 中号字体
 $size-large: 28px;
 
 $border-lighter: #e7e7e7;
+$border-light: #c9bed6;
 $border: $border-lighter;
 
 // Animation
