--- a/src/containers/InstalledApps/index.scss
+++ b/src/containers/InstalledApps/index.scss
@@ -14,10 +14,14 @@
 
 .toolbar {
   padding: 24px;
-}
 
-.dropdown {
-  border-color: $border-lighter !important;
+  .select {
+    width: 176px;
+
+    div {
+      box-shadow: none !important;
+    }    
+  }  
 }
 
 .search {
@@ -39,11 +43,11 @@
   }
 }
 
-.list {
+.list { 
   padding: 0 24px;
-  position: relative;
 
   .listItem {
+    position: relative;    
     display: table;
     width: 100%;
     padding: 7px 0;
@@ -63,11 +67,15 @@
       line-height: 1.15;
       vertical-align: middle;
       word-break: break-word;
+
+      a {
+        color: $title-color;
+      }
     }
 
     .handle {
       position: absolute;
-      right: 24px;
+      right: 0;
       top: 50%;
       width: 167px;
       padding: 0 16px;
