--- a/src/containers/InstalledApps/index.scss
+++ b/src/containers/InstalledApps/index.scss
@@ -20,7 +20,7 @@
 
     div {
       box-shadow: none !important;
-    }    
+    }
   }  
 }
 
@@ -39,15 +39,16 @@
 
   input::placeholder {
     font-weight: 400;
-    color: $placeholder-color;    
+    color: $placeholder-color;
   }
 }
 
-.list { 
+.list {
   padding: 0 24px;
+  margin: 0;
 
   .listItem {
-    position: relative;    
+    position: relative;
     display: table;
     width: 100%;
     padding: 7px 0;
