--- a/src/containers/Home/index.scss
+++ b/src/containers/Home/index.scss
@@ -3,10 +3,10 @@
 .home{
   display: table;
   width: 100%;
-  height: calc(100vh - #{$footer-height});
+  height: $main-height;
   .nav {
     display: table-cell;
-    width: 210px;
+    width: $nav-width;
     padding-left: calc(50vw - #{$content-width}/2);
     border-right: 1px solid $border;
     background: #ffffff;
