--- a/src/components/Nav/index.scss
+++ b/src/components/Nav/index.scss
@@ -9,6 +9,7 @@
       margin-top: 0;
     }
     p {
+      margin: 0;
       line-height: 19px;
       font-size: $size-medium;
       font-weight: bold;
