--- a/src/containers/BrowseApps/index.scss
+++ b/src/containers/BrowseApps/index.scss
@@ -2,11 +2,11 @@
 
 .browse {
   display: table;
-  height: calc(100vh - #{$footer-height});
+  height: $main-height;
   padding-top: $header-height;
   .nav {
     display: table-cell;
-    width: 210px;
+    width: $nav-width;
     padding-left: calc(50vw - #{$content-width}/2);
     border-right: 1px solid $border;
     background: #ffffff;
