--- a/src/components/Base/Input/index.scss
+++ b/src/components/Base/Input/index.scss
@@ -1,7 +1,7 @@
 @import '~scss/variables';
 
 .input {
-  padding: 8px 10px;
+  padding: 7px 10px;
   border-radius: 2px;
   background-color: #ffffff;
   border: solid 1px $border;
@@ -23,9 +23,10 @@
   height: 32px;
   padding-left: 44px;
   border-radius: 3px;
+  border: solid 1px $border-light;
   background-color: #ffffff;
   box-shadow: 0 2px 4px 0 rgba(48, 14, 86, 0.08);
-  border: solid 1px $border-light;
+  box-sizing: border-box;
   :global {
     .fa {
       opacity: 0.9;
