--- a/src/components/Base/Form/index.scss
+++ b/src/components/Base/Form/index.scss
@@ -7,7 +7,7 @@
     line-height: 16px;
     font-weight: bold;
     text-align: right;
-    color: #2f0d56;
+    color: $title-color;
   }
   .wrapper {
     display: inline-block;
@@ -20,7 +20,7 @@
     left: 0;
     bottom: -18px;
     font-size: 12px;
-    color: #626466;
+    color: $second-text-color;
   }
 }
 
@@ -33,5 +33,5 @@
   line-height: 19px;
   font-size: 16px;
   font-weight: bold;
-  color: #2f0d56;
+  color: $title-color;
 }
