add manage-clusters & manage-clusters-detail page

--- a/src/components/Base/Select/index.scss
+++ b/src/components/Base/Select/index.scss
@@ -4,6 +4,7 @@
   display: inline-block;
   position: relative;
   width: 276px;
+  text-align: left;
   i {
     position: absolute;
     right: 10px;
