--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -22,6 +22,7 @@ $placeholder-color: #c1c1c1;
 
 $background-color: #f6f6f8;
 $background-color-lighter: #ffffff;
+$th-background-color: #f1edf6;
 
 $family-sans-serif: "PingFang SC", "Lantinghei SC", "Helvetica Neue", Helvetica, Arial, "Microsoft YaHei", 微软雅黑,
 STHeitiSC-Light, simsun, 宋体, "WenQuanYi Zen Hei", "WenQuanYi Micro Hei", sans-serif;
