--- a/src/containers/Clusters/index.scss
+++ b/src/containers/Clusters/index.scss
@@ -3,3 +3,61 @@
 .apps {
   padding-top: $header-height;
 }
+
+.container {
+  width: $content-width;
+  margin: 0 auto;
+}
+
+.wrapper {
+  margin: 0 0 25px 0;
+  border-radius: 3px;
+  background-color: #fff;
+  box-shadow: 0 1px 4px 0 rgba(48, 14, 86, 0.06), 0 4px 8px 0 rgba(0, 0, 0, 0.04);
+}
+
+.toolbar {
+  padding: 24px;
+
+  .refresh {
+    border-color: $border-lighter;
+    vertical-align: top;
+  }
+
+  .select {
+    width: 176px;
+    margin-left: 16px;
+    vertical-align: top;
+
+    div {
+      box-shadow: none !important;
+    }    
+  }
+
+  .search {
+    display: inline-block;
+    width: 337px;
+    margin-left: 16px;
+    border-color: $border-lighter;
+    box-shadow: none;
+  
+    :global {
+      .fa {
+        color: $placeholder-color;
+      }
+    }
+  
+    input::placeholder {
+      font-weight: 400;
+      color: $placeholder-color;    
+    }
+  }  
+}
+
+.idLink {
+  color: $id-color;
+}
+
+.status {
+  text-transform: capitalize;
+}
