--- a/src/containers/InstalledApps/index.scss
+++ b/src/containers/InstalledApps/index.scss
@@ -6,7 +6,11 @@
 
 .container {
   width: $content-width;
-  margin: 0 auto 25px;
+  margin: 0 auto;
+}
+
+.wrapper {
+  margin: 0 0 25px 0;
   border-radius: 3px;
   background-color: #fff;
   box-shadow: 0 1px 4px 0 rgba(48, 14, 86, 0.06), 0 4px 8px 0 rgba(0, 0, 0, 0.04);
