--- a/server/views/index.pug
+++ b/server/views/index.pug
@@ -18,4 +18,5 @@ html(lang="en")
       !{children}
     script.
       window.__INITIAL_STATE__ = !{state || '{}'}
+      window.__SSR__ = !{isSSR}
     script(src= bundleUrl + '/build/bundle.js' async).
