replace mock data with mock server and support local config

--- a/server/views/index.pug
+++ b/server/views/index.pug
@@ -9,7 +9,8 @@ html(lang="en")
 
     link(rel="shortcut icon" href="/assets/favicon.ico")
     link(href='https://cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.min.css' rel="stylesheet")
-    link(href= bundleUrl + '/build/bundle.css' rel="stylesheet" media="all")
+    if !isDev
+      link(href= '/build/bundle.css' rel="stylesheet" media="all")
 
   body
     noscript You need to enable JavaScript to run this app.
