--- a/src/components/Header/index.scss
+++ b/src/components/Header/index.scss
@@ -29,7 +29,7 @@
     box-shadow: none;
     border: none;
     :global {
-      .fa {
+      .icon {
         opacity: 0.45;
         color: #ffffff;
       }
