--- a/src/components/Card/index.scss
+++ b/src/components/Card/index.scss
@@ -34,7 +34,7 @@
   }
   .desc{
     height: 54px;
-    line-height: 20px;
+    line-height: 1.29;
     color: lighten($title-color, 2%);
     overflow: hidden;
   }
