--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,6 +1,7 @@
 @charset "utf-8";
 @import "normalize.css";
 @import "variables";
+@import "../assets/fonts/roboto/roboto.css";
 
 body {
   font-family: $family-primary;
