--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -9,6 +9,8 @@ $green: #52cc8f;
 $yellow: #fad464;
 $orange: #f19e59;
 $purple: #6626af;
+$purple-light: #926dbd;
+$purple-dark: #5f3a8a;
 $grey: #cccccc;
 $grey-light: #d6cfde;
 
