--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -40,6 +40,7 @@ $success: $green;
 $family-primary: $family-sans-serif;
 $body-background-color: $background-color;
 
+$size-small: 12px;
 $size-medium: 16px; // 中号字体
 $size-large: 28px;
 
