--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -10,6 +10,7 @@ $yellow: #fad464;
 $orange: #f19e59;
 $purple: #6626af;
 $purple-light: #926dbd;
+$purple-lighter: #efe9f7;
 $purple-dark: #5f3a8a;
 $grey: #cccccc;
 $grey-light: #d6cfde;
