--- a/src/components/Base/Popover/index.scss
+++ b/src/components/Base/Popover/index.scss
@@ -111,5 +111,22 @@
         }    
       }      
     }
+
+    .operate-menu {
+      margin: 0 -5px;
+
+      span {
+        display: block;
+        line-height: 24px;
+        padding: 8px 12px 8px 11px;
+        text-align: left;
+        cursor: pointer;
+        transition: all $transition-speed;
+
+        &:hover {
+          background-color: $purple-lighter;
+        }
+      }
+    }
   }
 }
