--- a/src/components/Base/Input/index.scss
+++ b/src/components/Base/Input/index.scss
@@ -2,6 +2,7 @@
 
 .input {
   width: 100%;
+  height: 32px;
   padding: 7px 10px;
   border-radius: 2px;
   background-color: #ffffff;
@@ -11,6 +12,9 @@
   line-height: 16px;
   box-sizing: border-box;
   transition: all .3s ease-in-out;
+  &::placeholder {
+    color: $placeholder-color;
+  }
   &:focus {
     outline: none;
     border: solid 1px $third-text-color;
@@ -18,48 +22,27 @@
   }
 }
 
-.search {
+.inputGroup {
   position: relative;
-  width: 360px;
-  height: 32px;
-  padding-left: 44px;
-  border-radius: 3px;
-  border: solid 1px $border-light;
-  background-color: #ffffff;
-  box-shadow: 0 2px 4px 0 rgba(48, 14, 86, 0.08);
-  box-sizing: border-box;
   :global {
     .icon {
-      opacity: 0.9;
-      color: $third-text-color;
+      color: $placeholder-color;
     }
     .icon-search {
       position: absolute;
-      left: 15px;
+      left: 12px;
       top: 50%;
       transform: translateY(-50%);
     }
     .icon-close {
       position: absolute;
-      right: 15px;
+      right: 12px;
       top: 50%;
       transform: translateY(-50%) scale(0.6);
       cursor: pointer;
     }
   }
   input {
-    border: none;
-    outline: none;
-    height: 100%;
-    width: 100%;
-    font-weight: 500;
-    background-color: transparent;
-    color: $third-text-color;
-    opacity: 0.7;
-    &::placeholder {
-      color: $third-text-color;
-      opacity: 0.7;
-      font-weight: 500;
-    }
+    padding: 8px 8px 8px 40px;
   }
 }
