--- a/src/components/Card/index.scss
+++ b/src/components/Card/index.scss
@@ -6,12 +6,12 @@
   padding: 16px 24px 24px;
   margin: 24px 24px 0 0;
   border-radius: 3px;
+  border: 1px solid $border-light;
   background-color: #ffffff;
-  box-shadow: 0 2px 8px 0 rgba(48, 14, 86, 0.08), 0 2px 10px 0 rgba(48, 14, 86, 0.04);
   transition: all .3s ease-in-out;
   text-align: center;
   p {
-    margin-bottom: 0;
+    margin: 0;
   }
   .icon {
     display: inline-block;
@@ -30,12 +30,12 @@
     margin-top: 24px;
     font-weight: bold;
     color: $title-color;
-    margin-bottom: 10px;
+    margin-bottom: 8px;
   }
   .desc{
     height: 54px;
     line-height: 1.29;
-    color: lighten($title-color, 2%);
+    color: rgba($title-color, 0.7);
     overflow: hidden;
   }
   &:hover {
