--- a/src/components/Header/index.scss
+++ b/src/components/Header/index.scss
@@ -15,32 +15,30 @@
   
   .logo {
     display: inline-block;
-    width: $nav-width;
     margin-top: $header-height / 2;
     transform: translateY(-50%);
   }
 
   .search {
     display: inline-block;
-    margin-top: 8px;
-    margin-left: 78px;
+    width: 360px;
+    margin-left: 91px;
+    margin-top: $header-height / 2;
+    transform: translateY(-50%);
     vertical-align: top;
-    background-color: #ffffff10;
-    box-shadow: none;
-    border: none;
     :global {
       .icon {
-        opacity: 0.45;
         color: #ffffff;
       }
     }
     input {
-      color: #ffffff;
-      opacity: 0.7;
+      color: rgba(#ffffff, 0.7);
       font-weight: 500;
+      border: none;
+      border-radius: 16px;
+      background-color: rgba(#ffffff, 0.1);
       &::placeholder {
-        color: #ffffff;
-        opacity: 0.7;
+        color: rgba(#ffffff, 0.5);
         font-weight: 500;
       } 
     }
@@ -50,13 +48,26 @@
     float: right;
     line-height: $header-height;
     a {
-      margin-left: 20px;
-      color: #fff;
+      padding: 6px 12px;
+      margin-left: 8px;
+      border-radius: 14px;
+      color: #ffffff;
+      font-weight: 500;
       line-height: 16px;
-      transition: opacity .2s ease-in-out;
+      transition: all .3s ease-in-out;
       &:hover {
-        opacity: 0.5;
+        background-color: rgba(#ffffff, 0.1);
       }
+    }
+  }
+}
+
+.darkHeader {
+  background-image: none !important;
+  .menus a {
+    color: rgba($title-color, 0.8);
+    &:hover {
+      background-color: rgba($title-color, 0.1);
     }
   }
 }
