--- a/server/views/index.pug
+++ b/server/views/index.pug
@@ -8,7 +8,10 @@ html(lang="en")
     title= title
 
     link(rel="shortcut icon" href="/assets/favicon.ico")
+    link(rel="stylesheet" href="/assets/css/normalize.min.css")
+    link(rel="stylesheet" href="/assets/fonts/roboto/roboto.css")
     link(href='https://cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.min.css' rel="stylesheet")
+
     if !isDev
       link(href= bundlePrefix + '/bundle.css' rel="stylesheet" media="all")
 
